# mau

./: .gitignore  Cargo.toml  README.md  shard.yml
engine/: Cargo.toml  lib.rs
spec/: mau_spec.cr  spec_helper.cr
src/: config.rs  game.rs  main.cr  main.rs  mau.cr
src/game/: event.rs  game_loop.rs  state.rs
