[workspace]
members = ["engine"]

[package]
name = "mau"
version = "0.1.0"
authors = ["Mnimi Aionios <mechild02@gmail.com>", "SzKing1011 <szthompson1011@gmail.com>", "Dwellr <canadian.dwellers@gmail.com>", "OsmiumShield <NONE>", "ShockEMP <meakoda2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mini-game = { version = "0.0.1", path = "./engine" }
serde = "1.0.123"
serde_derive = "1.0.123"
toml = "0.5.8"
